# hframe

./: Cargo.toml  README.md  index.html  note  run.sh
.cargo/: config.toml
.github/workflows/: rust.yml
client/: index.html
client/src/: main.rs
companion/: package-lock.json  package.json  vite.config.ts
companion-js-app/: companion.js  idea  index.html
companion/src/: App.jsx  App.tsx  hooks.js  main.jsx  main.tsx
companion/src/components/: Area.jsx  MaskRect.jsx
examples/demo/: Cargo.toml  index.html
examples/demo/src/: app.rs
examples/markdown-editor/: Cargo.toml  index.html
examples/markdown-editor/src/: app.rs  main.rs
hframe-core/: Cargo.toml  index.html  index.js  lib.js
hframe-core/src/: composed_area.rs  composition_context.rs  composition_strategies.rs  composition_strategy.rs  context.rs  geo.rs  id.rs  lib.rs  main.rs  platform.rs  test_platform.rs  tree.rs  web_platform.rs  world.rs
hframe-core/src/composition_strategies/: svg_data_mask.rs
hframe-js/: gui.js  index.html
labs/: clip-complex.html  clip.html  clip2.html  dyn-mask.html  fo.html  mask.html
src/: app.rs  area.rs  aware.rs  bare_html.rs  companion.rs  composed_area.rs  composition.rs  composition_context.rs  composition_strategies.rs  composition_strategy.rs  core.rs  egui.rs  geometry.rs  hframe.css  hframe.rs  html_window.rs  html_window_state.rs  iframe.css  iframe.rs  lib.rs  main.rs  mask_strategies.rs  mask_strategy.rs  registry.rs  templates.rs  utils.rs  web.rs  widgets.rs  window.rs  window_state.rs
src/composition_strategies/: color_map_mask.rs  nop.rs  svg_data_mask.rs
src/composition_strategies/color_map_mask/: companion.js  helpers.rs  js_glue.rs
src/core/: composition_context.rs  js.rs  models.rs  utils.rs
src/core/utils/: geometry.rs  vec.rs
src/js/: companion.js
src/js/companion/: package.json
src/mask_strategies/: auto.rs  canvas_overlay.rs  data_mask.rs  document_mask.rs  hide.rs  nop.rs
src/utils/: browser_detection.rs  egui.rs  vec.rs
src/widgets/: bare_html_overlay.rs  html_frame.rs  html_window.rs
