[package]
name = "hframe"
version = "0.4.1"
edition = "2021"
rust-version = "1.73"
description = "Show HTML content \"inside\" your egui rendered application"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hframe"
repository = "https://github.com/noxware/hframe"

[dependencies]
egui = ">=0.25.0, <1.0.0"
js-sys = "0.3.69"
urlencoding = "2.1.3"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.67", features = [
    "Window",
    "Document",
    "HtmlBodyElement",
    "console",
    "HtmlHeadElement",
    "Navigator",
    "Element",
    "NodeList",
    "HtmlElement",
    "CssStyleDeclaration",
] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
