[package]
name = "hframe"
version = "0.4.1"
edition = "2021"
rust-version = "1.73"
description = "Show HTML content \"inside\" your egui rendered application"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hframe"
repository = "https://github.com/noxware/hframe"

[dependencies]
egui = ">=0.25.0, <1.0.0"
serde = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tap = "1.0.1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
yew = { version = "0.21.0", features = ["csr"] }
web-sys = { version = "0.3.67", features = [
  "Document",
  "Element",
  "Event",
  "HtmlElement",
  "Node",
  "Window",
  "console",
  "HtmlDivElement",
  "SvgElement",
  "CssStyleDeclaration",
] }


[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
