[package]
name = "hframe-core"
version = "0.1.0"
edition = "2021"

[dependencies]
emath = "0.27.2"
urlencoding = "2.1.3"
web-sys = { version = "0.3.69", features = [
  "Window",
  "Document",
  "HtmlBodyElement",
  "console",
  "HtmlHeadElement",
  "Navigator",
  "Element",
  "NodeList",
  "HtmlElement",
  "CssStyleDeclaration",
] }
