[package]
name = "hframe-core"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tap = "1.0.1"
wasm-bindgen = "0.2.92"
# May not be required in the library
wasm-bindgen-futures = "0.4.42"
