[package]
name = "markdown-editor"
version = "0.0.0"
edition = "2021"
rust-version = "1.73"


[dependencies]
hframe = { path = "../.." }
egui = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
] }
log = "0.4"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
comrak = "0.29.0"


[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
